style.css
/* ... */
.headerContainer{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}
.input-subscribe{
    padding: 20px;
    height: 25px;
    margin-top: 15px;
    border-radius: 8px;
    font-family: "Montserrat Alternates", sans-serif;
    box-shadow: 2px 2px 0px 1px #f4e8f4a8;
    border: 1px solid #f4e8f4a8;
    color: #010021;
}
.submit{
    padding: 9px;
    margin-top: 15px;
    font-size: 15px;
    border-radius: 10px;
    font-family: "Montserrat", sans-serif;
    background-color: #00A9C7;
    color: #F2F2F2;
    border: none;
    box-shadow: 2px 2px 0px 1px #f4e8f4a8;
    letter-spacing: 2px;
}
.image-r{
    margin-right: 10px;
    margin-top: 10px;
}
.input-button{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 10px;
}
#header-projects{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: .7em;
}
.card-image{
    width: 300px;
    height: 280px;
    border-radius: 30px; 
}
.container-footer{
    background-color: rgba(0, 0, 31, 0.8);
    border: 1px solid #b1a7a7;
    border-radius: 50px;
    margin-top: 20px;
    margin-left: 90px;
    margin-right: 90px;
    margin-bottom: 60px;
    box-shadow:  2px 4.3px rgba(242, 242, 242, 0.6);
}
hr{
    border: 1px solid #fef7f7;
}
.image-about{
    display: flex;
    justify-content: center;
}
.proj-container{
    background-color: #F2F2F2;
    box-shadow: 3px 3px 0px 1px #f4e8f4a8;
    padding: 6px;
    margin-top: 50px;
    width: 220px;
    height: 360px;
    border-radius: 15px; 
    text-align: center;
}
.proj-image{
    width: 200px;
    height: 200px;
    border-radius: 30px; 
}
.proj_head{
    color: #E154E4;
    font-size: 20px;
    font-weight: bold;
    font-family: "Montserrat", sans-serif;
}
.proj-par{
     color: #4971B0; 
     font-family: "Montserrat Alternates", sans-serif;
     font-style: italic;
     margin-top: 10px;
}
.btn-project{
    background-color: #F2F2F2;
    color: #00A9C7;
    border: 1px solid #00A9C7;
    font-family: "Montserrat Alternates", sans-serif;
    font-size: 15px;
    padding: 6px;
    border-radius: 5px;
    margin-top: 10px;
    display: inline-block;
   
}
.btn-project:hover{
    box-shadow: 2px 2px 2px 0px #025FA5;
}
.proj-link{
    color: #00A9C7;
}
.proj-link:hover{
    color:#025FA5;
}


@media all and ( max-width: 800px){
    .container-header{
        border-radius: 15px;
        margin-left: 30px;
        margin-right: 30px;
        box-shadow:  2px 2.5px rgba(242, 242, 242, 0.6);
    }
    .logo-image-header{
        margin-top: 50px;
        width: 250px;
    }
    h1{
        font-size: 25px;
        padding: 10px;
        text-align: center;
    }
    .container-logo{
        margin-top: 50px;
        margin-left: 20px;
        margin-right: 20px;
    }
    .container{
       background-position:bottom right;
    }
    ul{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        flex-wrap: wrap;
    }
    .transparent{
        margin-left: 20px;
        margin-right: 20px;
    }
    .btnMail{
        display: block;
        margin: auto;
        margin-top: 50px;
        margin-bottom: 50px;
    }
    .design{
        text-align: start;
    }
     .image-about-one, .image-about{
        margin-right: 0px;
        margin-top: 10px;
     }
     .idea-of-project{
        padding: 7px;
        font-size: 20px;
        margin-left: 50px;
        margin-right: 50px;
    }
    .my-skills{
        font-size: 20px;
        margin-left: 40px;
        margin-right: 40px;
    }
    .skills-soft{
       font-size: 20px;
    }
    .more-right{
        margin-right: 80px;
        margin-top: 0px;
    }
    #header-skills{
        margin-left: 30px;
        margin-right: 30px;
    }
    .soft-skills{
        flex: 1;
    }
    .icons{
        padding: 10px;
    }
    .about{
        font-size: 40px;
        margin: 10px;
    }
    #certificates{
        margin-top: 50px;
    }
    #container-certificates{
        margin-top: 50px;
    }
   #slide{
    width: 600px;
   } 
    .back, .next{
    width: 35px;
   }
 .message{
    font-size: 30px;
 }
.input-par{
    font-size: 25px;
    width: 80%;
    text-align: start;
}
.two{
    width: 80%;
}
.button{
    width: 50%;
}
.butoons{
   margin: 0px;
}
.header-conteiner{
    margin: 20px;
}
.social-icon{
    padding: 2px;
    border-radius: 50%;
    margin: 5px;
}
.container-footer{
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 100px;
} 
.input{
    padding: 20px;
    display: block;
    width: 80%;
	margin-bottom: 10px;
    color: #010021;
    font-family: "Montserrat", sans-serif;
    border-radius: 5px;
    border: none;
    box-shadow: 3px 3px  #12C2E8;
} 

.frontend{
    font-size:15px;
}
   
}

@media all and ( max-width: 500px){
    .image-one{
        margin-top: 20px;
        width: 150px;
    }
    h1{
        font-size: 20px;
        padding: 10px;
        text-align: center;
    }
    .container-logo{
       margin-bottom: 20px;
    }
    .container{
        background-position:bottom right;
    }
    .more-right{
        margin-right: 70px;
    }
    .social-icon{
        width: 20px;
        height: 20px;
    }
    .header-conteiner{
        margin: 10px;
    }
    #slide{
        width: 300px;
       }
    .back{
        margin-left: 25px;
        width: 25px;
       }
    .next{
        margin-left: -50px;
        width: 25px;
       }
    .input-subscribe{
        text-align: center;
    }
    .submit{
        text-align: center;
    }
    .frontend{
        font-size: 15px;
        font-weight: lighter;
    }
}
/* ... */

